Fixing Page Contents on Mobile

--- a/src/_patterns/00-nds/02-molecules/blocks/block-status-message/block-status-message.scss
+++ b/src/_patterns/00-nds/02-molecules/blocks/block-status-message/block-status-message.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: $white;
     padding: $s-2 $s-1 $s-1 $s-1;
-    margin: $s-1-25 0 0 0;
+    margin: $s-2 0 0 0;
     @include media-breakpoint-up(md) {
         padding: $s-1 $s-2 $s-1 $s-2-50;
         margin: 0 0 0 $s-1-25;
